# airflow_in_docker_compose

./: .gitignore  docker-compose-with-celery-executor.yml  pyproject.toml
