[tool.poetry]
name = "airflow-dag-dev"
version = "0.1.0"
description = "Set of Apache Airflow with Docker Compose examples"
authors = ["y"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.*"

[tool.poetry.dev-dependencies]
pytest-docker-compose = "^3.1.2"
apache-airflow = "1.10.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
